--- a/action.yml
+++ b/action.yml
@@ -53,13 +53,12 @@ runs:
         git config --global user.name "${{ inputs.commit_name }}"
         git config --global user.email "${{ inputs.commit_email }}"
         git config --global pull.rebase false
-        TARGET_BRANCH=${{ inputs.target_branch }}
         CLONE_DIRECTORY=$(mktemp -d)
 
-        git clone --single-branch --branch ${{ inputs.target_branch }} "https://${{ inputs.access_token }}@github.com/$DESTINATION_OWNER/$DESTINATION_REPOSITORY.git" "$CLONE_DIRECTORY"
+        git clone --single-branch --branch ${{ inputs.target_branch }} "https://${{ inputs.token }}@github.com/$DESTINATION_OWNER/$DESTINATION_REPOSITORY.git" "$CLONE_DIRECTORY"
 
         cd $CLONE_DIRECTORY
-        sed -r "s/^(\s*tag\s*:\s*).*/\1${{ the_version }}/" -i "${{ inputs.file }}"
+        sed -r "s/^(\s*tag\s*:\s*).*/\1${{ inputs.the_version }}/" -i "${{ inputs.file }}"
 
         git add ${{ inputs.file }}
 
